fixed visiblity issue with js

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -53,4 +53,15 @@
     &.show {
         visibility: visible;
     }
+
+    &-branding, &-nav {
+        display: flex;
+        flex-flow: column wrap; // /row
+        align-items: center;
+        justify-content: center;
+        float: left;
+        width: 50%;
+        height: 100vh;
+        overflow: hidden;
+    }
 }
